--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext js .",
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "echo 'tests will go here...'",
+    "travis": "npm run lint && npm run test"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
