--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: node_js
+language: generic
 
 services:
   - docker
@@ -7,4 +7,4 @@ before_install:
   - docker build -t project-2 .
 
 script:
-  - docker run npm run travis
+  - docker run project-2 npm run travis
