--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext js .",
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "test": "echo 'tests will go here...'",
     "travis": "npm run lint && npm run test"
   },
@@ -15,6 +15,7 @@
     "eslint": "^7.21.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.7"
   }
 }
