--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "lint": "eslint --ext js .",
     "start": "nodemon ./bin/www",
-    "test": "echo 'tests will go here...'",
+    "test": "node test/main",
     "travis": "npm run lint && npm run test"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "eslint": "^7.21.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "log-symbols": "^4.1.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
     "revalidator": "^0.3.1"
