--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: internship_qualifier
     mem_reservation: "1024m"
     ports:
-      - 3000
+      - 3000:3000
     depends_on:
       - mongo
 
@@ -14,3 +14,14 @@ services:
     restart: always
     expose:
       - '27017'
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+    depends_on:
+      - mongo
