--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "log-symbols": "^4.1.0",
+    "mongoose": "^5.12.5",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.7",
     "revalidator": "^0.3.1"
